# hikey970

./: .gitmodules  .travis.yml  README.md
benchmarks/: .gitignore  Makefile
benchmarks/parsec/: .gitignore  Makefile  build_and_push.sh
benchmarks/parsec/patches/: hikey_blackscholes.diff  hikey_bodytrack.diff  hikey_canneal.diff  hikey_dedup.diff  hikey_facesim.diff  hikey_ferret.diff  hikey_fluidanimate.diff  hikey_freqmine.diff  hikey_global.diff  hikey_gsl.diff  hikey_libjpeg.diff  hikey_ssl.diff  hikey_streamcluster.diff  hikey_swaptions.diff  hikey_x264.diff  hikey_zlib.diff
build_kernel/: .gitignore  Makefile  init.rc.add
build_kernel/bootloader/: l-loader.diff
build_kernel/kernel/: pmu.diff
monitoring/: Makefile  toolchain_hikey.cmake
monitoring/cci_perfcounters/: .gitignore  CMakeLists.txt  cci_perfcounters.cpp
monitoring/global_perfcounters/: .gitignore  CMakeLists.txt  global_perfcounters.cpp
monitoring/migration_csv/: CMakeLists.txt  migration_csv.cpp
monitoring/modules/cci_pmu/: .gitignore  Makefile  cci_pmu.c
monitoring/perfcounters/: .gitignore  CMakeLists.txt  perfcounters.cpp
monitoring/perfcounters_csv/: CMakeLists.txt  backup_perfcounters_csv.cpp  perfcounters_csv.cpp
monitoring/perfcounters_csv/hikey/: CMakeCache.txt  Makefile  cmake_install.cmake
monitoring/perfcounters_csv/native/: CMakeCache.txt  Makefile  cmake_install.cmake  perfcounters_csv
monitoring/temperature/: CMakeLists.txt  temperature.cpp
monitoring/utils/: console.cpp  console.h  perf.cpp  perf.h  processes.cpp  processes.h
